--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+      "express": "^4.18.2",
       "console.table": "^0.10.0",  
       "inquirer": "^8.2.4",
       "mysql2": "^2.2.5"
